cabal-version:      2.4
name:               AdventOfCode2021
version:            0.1.0.0

synopsis: Solutions to Advent of Code 2021
license: Unlicense
author:             CastilloDel
maintainer:         delcastillodelarosadaniel@gmail.com

executable day1
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day1/src
    default-language: Haskell2010

executable day2
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day2/src
    default-language: Haskell2010

executable day3
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day3/src
    default-language: Haskell2010

executable day4
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day4/src
    default-language: Haskell2010

executable day5
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day5/src
    default-language: Haskell2010

executable day6
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day6/src
    default-language: Haskell2010

executable day7
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day7/src
    default-language: Haskell2010

executable day8
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day8/src
    default-language: Haskell2010

executable day9
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   day9/src
    default-language: Haskell2010

executable day10
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   day10/src
    default-language: Haskell2010

executable day11
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, matrix, mtl
    hs-source-dirs:   day11/src
    default-language: Haskell2010

executable day12
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, containers, split
    hs-source-dirs:   day12/src
    default-language: Haskell2010

executable day13
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, containers, split
    hs-source-dirs:   day13/src
    default-language: Haskell2010